@@ -84,6 +84,9 @@ release-publish: release-upload releases/$(sha1_file)
 	@echo "Subject: $(PACKAGE) release $(VERSION) now available"
 	@echo ""
 	@echo "============================== CUT HERE =============================="
+	@echo "cairomm is a C++ API for the cairo graphics library.  For more "
+	@echo "information, see http://cairographics.org/cairomm"
+	@echo ""
 	@echo "A new $(PACKAGE) release $(VERSION) is now available from:"
 	@echo ""
 	@echo "	$(RELEASE_URL_BASE)/$(tar_file)"
@@ -97,8 +100,8 @@ release-publish: release-upload releases/$(sha1_file)
 	@echo "	$(RELEASE_URL_BASE)/$(gpg_file)"
 	@echo "	(signed by `getent passwd "$$USER" | cut -d: -f 5 | cut -d, -f 1`)"
 	@echo ""
-	@echo "cairomm is a C++ API for the cairo graphics library.  For more "
-	@echo "information, see http://cairographics.org/cairomm"
+	@echo "WHAT'S NEW"
+	@echo "=========="
 	@echo ""
 	@echo "============================== CUT HERE =============================="
 	@echo "Also, please include the new entries from the NEWS file."
