@@ -3,7 +3,7 @@ AC_INIT(cairomm/cairomm.h)
 #release versioning
 GENERIC_MAJOR_VERSION=1
 GENERIC_MINOR_VERSION=2
-GENERIC_MICRO_VERSION=0
+GENERIC_MICRO_VERSION=1
 GENERIC_VERSION=$GENERIC_MAJOR_VERSION.$GENERIC_MINOR_VERSION.$GENERIC_MICRO_VERSION
 AC_SUBST(GENERIC_MAJOR_VERSION)
 AC_SUBST(GENERIC_MINOR_VERSION)
